2013-12-31  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* openclose.c: bug fix about error check when fopen.
	Use fsyscp_fopen() instead of fsyscp_xfopen() (Windows only)
	* texmfmp.c: Use get_command_line_args_utf8() (Windows only)

2013-12-03  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* openclose.c, texmfmp.c: Support KANJI file name in (e)upTeX and
	XeTeX on Windows.

2013-06-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update to e-pTeX and e-upTeX 130605 from Hironori Kitagawa.
	* texmfmp.c (pdftex_fail): Adapted from ../pdftexdir/utils.c.
	(initstarttime, makecstring, makecfilename, getcreationdate,
	getfilemoddate, getfilesize): Move definition of these functions
	also used by e-(u)pTeX from ../pdftexdir/utils.c to here.

2013-04-09  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* printversion.c: 2012 ---> 2013.

2013-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (mk_shellcmdlist): Simplify.

2013-01-06  Khaled Hosny  <khaledhosny@eglug.org>

	* texmfmp.c [XeTeX]: Support input pipes.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-10-14  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Use _IONBF for unbuffered stream.

2012-10-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (mk_shellcmdlist): The argument is not constant.

2012-10-10  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Modify determination of fullpath for restricted shell
	escape commands.

2012-09-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Since normalize_quotes() is declared static,
	the forward declaration should also be static.

2012-09-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c (maininit): On Windows, latex "\input" "a b c", for example,
	was not allowed. Allow file name with spaces in these cases.

2012-08-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* main.c [WIN32]: Added _setmaxstdio() (from W32TeX).

	* openclose.c (recorder_start): Reduce TL/W32TeX diffs.